--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ hr {
     text-decoration: none;
     color: #FFFFFE;
     font-size: 18px;
-    margin: 0 30px;
+    margin: 0 1em;
 }
 
 .navbar-menu a:hover {
@@ -85,6 +85,15 @@ hr {
     transition: 0.3s;
 }
 
+.phone-menu-button {
+    text-align: center;
+    display: none;
+}
+
+.phone-menu-button img {
+    height: 30px;
+}
+
 .navbar-links {
     display: flex;
     justify-content: center;
@@ -92,12 +101,34 @@ hr {
 }
 
 #tel, #instagram {
-    height: 35px;
-    width: 35px;
     border: none;
     border-radius: 5px;
-    margin: 0 10px;
-    box-shadow: 0 0 10px 0 rgb(0, 0, 0);
+    margin: 0 5px;
+}
+
+#tel {
+    height: 40px;
+    background: none;
+}
+
+#tel img {
+    height: 30px;
+}
+
+#instagram img {
+    height: 40px;
+    width: 40px;
+    border-radius: 5px;
+}
+
+#instagram a {
+    height: 40px;
+}
+
+#instagram {
+    height: 50px;
+    width: 50px;
+    background: none;
 }
 
 .navbar-links img {
@@ -114,13 +145,36 @@ hr {
     justify-content: center;
 }
 
-.banner {
+.navbar-menu-mobile {
+    display: none;
+}
+
+.banner1, .banner2, .banner3, .banner4, .banner5 {
+    transition: opacity 1s ease-in-out, background-size 0s, background-position 0s;
     background-attachment: fixed;
     height: 100vh;
-    background-size: 2100px;
+    width: 100%;
     background-repeat: no-repeat;
-    background-position: 0 -400px;
-    transition: opacity 1s ease-in-out, background-size 0s, background-position 0s;
+}
+
+.banner1 {
+    background-size: 2560px !important;
+    background-position: 5000px !important;
+}
+
+.banner2 {
+    background-size: 2560px !important;
+    background-position: 5000px !important;
+}
+
+.banner3 {
+    background-size: 2160px !important;
+    background-position: 6000px !important;
+}
+
+.banner4 {
+    background-size: 2560px !important;
+    background-position: 5000px !important;
 }
 
 .banner-overlay {
@@ -300,7 +354,7 @@ hr {
     line-height: 40px;
 }
 
-#example-instagram, #example-contact {
+#example-instagram {
     width: 200px;
     height: 50px;
     border: none;
@@ -309,7 +363,23 @@ hr {
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
     cursor: pointer;
     border-radius: 5px;
+    background: linear-gradient(45deg, #f8a61f, #bc2a8d);
+    font-weight: 800;
+    color: #FFFFFE;
 }
+
+#example-instagram img {
+    height: 43px;
+    margin-top: 5px;
+}
+
+#example-contact {
+    margin-left: 20px;
+    font-family: 'Dancing Script', cursive;
+    font-weight: 900;
+    font-size: 30px;
+}
+
 
 footer {
     background-color: rgba(29, 31, 31, 0.7);
@@ -460,7 +530,7 @@ footer.not-home {
 
 .about-text {
     text-align: start;
-width: 90%;
+    width: 90%;
 }
 
 .about-banner-overlay h1 {
